# marionette

./: .dockerignore  .env.example  .gitignore  AGENTS.md  COMPOSE_TEMPLATE_DESIGN.md  Cargo.toml  Dockerfile  MIGRATION_STRATEGY_ANALYSIS.md  MIGRATION_STRATEGY_PLAN.md  Makefile  README.md  TRANSFER_DESIGN.md  docker-compose.ecosystem.yml  docker-compose.prod.yml  docker-compose.socket-proxy.yml  docker-compose.yml  supervisord.conf
.github/workflows/: ci.yml  publish.yml
.hermes/plans/: 2026-06-15_051954-marionette-implementation.md
.recycle/core-src/: audit.rs  helpers.rs  migration.rs  registry.rs  ws_relay.rs
.recycle/core-src/models/: container.rs  endpoint.rs  migration.rs  mod.rs  route.rs  stack.rs  user.rs  volume.rs
.recycle/core-src/relay/: auth.rs  mod.rs  session.rs  signed.rs
.recycle/core-src/routes/: images.rs  mod.rs  networks.rs  routes_config.rs  swarm.rs  system.rs  templates.rs  volumes_inspect.rs
.recycle/core-src/ws/: exec.rs  logs.rs  merged_logs.rs
.recycle/core-tests/: session_manager_test.rs  token_lifecycle_test.rs
.recycle/crates/relay-agent/: Dockerfile  docker-compose.relay.yml  docker-entrypoint.sh
core/: Cargo.toml
core/src/: compose.rs  compose_diff.rs  db.rs  docker.rs  lib.rs  main.rs  migration.rs  models.rs  registry.rs  routes.rs  switchover.rs  transfer.rs  ws_relay.rs
core/src/migration/: analyze.rs  mod.rs  prepare.rs  rollback.rs  state.rs  switchover.rs  transfer.rs
core/src/models/: audit.rs  container.rs  endpoint.rs  image.rs  migration.rs  mod.rs  network.rs  stack.rs  system.rs  template.rs  unified_migration.rs
core/src/relay/: auth.rs
core/src/routes/: containers.rs  endpoints.rs  images.rs  mod.rs  networks.rs  nginx.rs  routes_config.rs  stacks.rs  swarm.rs  system.rs  users.rs  volumes.rs  volumes_inspect.rs
core/src/ws/: deploy.rs  exec.rs  logs.rs  mod.rs  progress.rs  stats.rs
core/tests/: signed_message_test.rs
crates/relay-agent/: Cargo.toml  Dockerfile  docker-compose.relay.yml  docker-entrypoint.sh
crates/relay-agent/src/: auth.rs  config.rs  docker.rs  handlers.rs  lib.rs  main.rs  ops.rs  signed.rs  transfer.rs  ws.rs
crates/relay-agent/tests/: signed_test.rs
crates/relay-protocol/: Cargo.toml
crates/relay-protocol/src/: errors.rs  lib.rs  message.rs  payloads.rs  validate.rs
deploy/: deploy.sh  docker-entrypoint.sh  http-redirect.py  supervisord.conf  tls-frontend.py
docs/: api-reference.md  architecture.md  contributing.md  faq.md  project-inception-record.md  project-inception-template.md  quickstart.md  security.md  troubleshooting.md  tutorial.md  user-manual.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ActionBar.jsx  AuthGate.jsx  Breadcrumb.jsx  ComposeEditor.jsx  ConnectionReview.jsx  ContainerTable.jsx  DiffPanel.jsx  EndpointSwitcher.jsx  ErrorBoundary.jsx  FilterBar.jsx  JsonTree.jsx  ListToolbar.jsx  LogViewer.jsx  MaintenanceOverlay.jsx  MigrationEditor.jsx  (+20 more)
gateway/: package-lock.json  package.json  tsconfig.json
gateway/src/: auth.ts  index.ts  proxy.ts
scripts/: entrypoint.sh  generate-cert.sh
(+26 files in other folders)
